fix: Overflow on trail pages caused by primary

--- a/sass/assets/styles/base.scss
+++ b/sass/assets/styles/base.scss
@@ -159,11 +159,3 @@ footer {
   }
 }
 
-// Map
-.map {
-  display: block;
-  width: 100%;
-  height: 384px;
-
-  border-radius: 8px;
-}
