--- a/sass/assets/styles/trail.scss
+++ b/sass/assets/styles/trail.scss
@@ -1,6 +1,7 @@
+@import "_map";
+
 // Generics
 section.primary {
-  width: 100%;
   max-width: 820px;
   padding: 8px;
 }
